display changlle, trans image to python

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6OCwiaWF0IjoxNjQzMzY2OTQ3LCJleHAiOjE2NDMzODQ5NDd9.RvlVlfwDBmJ4Pl7wc1u0G8jytbobxmKU3z6XI2-cl-k
+TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NiwiaWF0IjoxNjQ1NDMzMDUzLCJleHAiOjE2NDU0NTEwNTN9.oBSxQIW3U81oBXj1FwW8Hw9sS_fePQWx-RnCVmVcLhg
 PORT = 8000
+ENDPOINT = http://112.137.129.202
