--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NiwiaWF0IjoxNjQ1NDMzMDUzLCJleHAiOjE2NDU0NTEwNTN9.oBSxQIW3U81oBXj1FwW8Hw9sS_fePQWx-RnCVmVcLhg
+TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MywiaWF0IjoxNjQ2MDk5MjYyLCJleHAiOjE2NDYxMTcyNjJ9.aslM5yHr52BYQxIM5EsAKerlHHDNCy-m3g6syXNEPAY
 PORT = 8000
-ENDPOINT = http://112.137.129.202
+ENDPOINT = http://112.137.129.202:8004/
